@@ -178,9 +178,9 @@ ags_sfz_synth_util_copy_s8(gint8 *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -448,15 +448,17 @@ ags_sfz_synth_util_copy_s16(gint16 *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
 
   tuning = 100.0 * ((note + 48.0) - base_key);
 
+  g_message("tuning %f", tuning);
+  
   ags_hq_pitch_util_compute_s16(im_buffer,
 				frame_count,
 				samplerate,
@@ -718,9 +720,9 @@ ags_sfz_synth_util_copy_s24(gint32 *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -988,9 +990,9 @@ ags_sfz_synth_util_copy_s32(gint32 *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -1258,9 +1260,9 @@ ags_sfz_synth_util_copy_s64(gint64 *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -1528,9 +1530,9 @@ ags_sfz_synth_util_copy_float(gfloat *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -1798,9 +1800,9 @@ ags_sfz_synth_util_copy_double(gdouble *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
@@ -2068,9 +2070,9 @@ ags_sfz_synth_util_copy_complex(AgsComplex *buffer,
   pitch_keycenter = ags_sfz_sample_get_pitch_keycenter(sfz_sample);
 
   if(key >= 0){
-    base_key = (gdouble) key - 22.0;
+    base_key = (gdouble) key - 21.0;
   }else if(pitch_keycenter >= 0){
-    base_key = (gdouble) pitch_keycenter - 22.0;
+    base_key = (gdouble) pitch_keycenter - 21.0;
   }else{
     base_key = 48.0;
   }
